# ygopro-core

./: CMakeLists.txt  card.cpp  interpreter.h  operations.cpp
